--- a/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
@@ -15,7 +15,7 @@
             <th>Nom</th>
             <th>Prix</th>
             <th>Stock</th>
-            <th>Details</th>
+            <th>Détails</th>
             <th>Modifier</th>
             <th>Supprimer</th>
         </tr>
@@ -23,26 +23,27 @@
     <tbody>
     {% for produit in produits %}
         <tr>
-            <td>{{ produit.id }}</td>
-            <td>{{ produit.nomProduit }}</td>
-            <td>{{ produit.prix }} €</td>
-            <td>{{ produit.stock }}</td>
-            <td>
-                <a href="{{ path('Administrateur_Detailproduit', {id: produit.id}) }}" class="">Voir</a>
+            <td data-label="ID">{{ produit.id }}</td>
+            <td data-label="Nom">{{ produit.nomProduit }}</td>
+            <td data-label="Prix">{{ produit.prix }} €</td>
+            <td data-label="Stock">{{ produit.stock }}</td>
+            <td data-label="Détails">
+                <a href="{{ path('Administrateur_Detailproduit', {id: produit.id}) }}">Voir</a>
             </td>
-            <td>
-                <a href="{{ path('Administrateur_ModifierProduit', {id: produit.id}) }}" class="">Modifier</a>
+            <td data-label="Modifier">
+                <a href="{{ path('Administrateur_ModifierProduit', {id: produit.id}) }}">Modifier</a>
             </td>
-            <td>
-                <form method="post" action="{{ path('Administrateur_SupprimerProduit', {id: produit.id}) }}" style="display:inline-block" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce produit ? Cette action est définitive');">
-                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.id) }}"> {# Protections CSRF #}
-                    <button class="">Supprimer</button>
+            <td data-label="Supprimer">
+                <form method="post" action="{{ path('Administrateur_SupprimerProduit', {id: produit.id}) }}" style="display:inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce produit ? Cette action est définitive.');">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.id) }}">
+                    <button type="submit">Supprimer</button>
                 </form>
             </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
+
 <div class="NouveauProduit">
     <a href="{{ path('Administrateur_AjoutProduit') }}" class="">Ajouter un produit</a>
 </div>
