--- a/templates/Compte/commande/historique.html.twig
+++ b/templates/Compte/commande/historique.html.twig
@@ -14,70 +14,96 @@
 
 
   <div class="HistoriqueDeCommandes">
-    <table class="ListeCommandes">
-        <thead>
-            <tr>
-                <th>Référence</th>
-                {% if is_granted('ROLE_ADMIN') %}
-                    <th>Utilisateurs</th>
-                {% else %}
-                    <th>Email</th>
-                {% endif %}
-                <th>Adresse de livraison</th>
-                <th>Nombre total d'articles</th>
-                <th>Total (€)</th>
-                <th>Détail</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% if commandes is empty %}
-                <tr class="CommandesVide">
-                    <td colspan="6">
-                        {% if is_granted('ROLE_ADMIN') %}
-                            Aucune commande à afficher.
-                        {% else %}
-                            Vous n'avez aucune commande.
-                        {% endif %}
-                    </td>
-                </tr>
+   <table class="ListeCommandes">
+    <thead>
+        <tr>
+            <th>Référence</th>
+            {% if is_granted('ROLE_ADMIN') %}
+                <th>Utilisateurs</th>
             {% else %}
-                {% for commande in commandes %}
-                    {% set total = 0 %}
-                    {% set nbArticles = 0 %}
-                    {% for ligne in commande.ligneDeCommandes %}
-                        {% set total = total + (ligne.quantiteCommande * ligne.prixUnitaireProduit) %}
-                        {% set nbArticles = nbArticles + ligne.quantiteCommande %}
-                    {% endfor %}
+                <th>Email</th>
+            {% endif %}
+            <th>Adresse de livraison</th>
+            <th>Nombre total d'articles</th>
+            <th>Total (€)</th>
+            <th>Détail</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% if commandes is empty %}
+            <tr class="CommandesVide">
+                <td colspan="6">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        Aucune commande à afficher.
+                    {% else %}
+                        Vous n'avez aucune commande.
+                    {% endif %}
+                </td>
+            </tr>
+        {% else %}
+            {% for commande in commandes %}
+                {% set total = 0 %}
+                {% set nbArticles = 0 %}
+                {% for ligne in commande.ligneDeCommandes %}
+                    {% set total = total + (ligne.quantiteCommande * ligne.prixUnitaireProduit) %}
+                    {% set nbArticles = nbArticles + ligne.quantiteCommande %}
+                {% endfor %}
 
-                    <tr>
-                        <td>{{ commande.reference }}</td>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <td>{{ commande.utilisateur ? commande.utilisateur.nom ~ ' ' ~ commande.utilisateur.prenom : 'Inconnu' }}</td>
-                        {% else %}
-                            <td>{{ commande.utilisateur ? commande.utilisateur.email : 'Inconnu' }}</td>
-                        {% endif %}
+                <tr>
+                    <td>
+                        <span class="label">Référence :</span>
+                        <span class="valeur">{{ commande.reference }}</span>
+                    </td>
+
+                    {% if is_granted('ROLE_ADMIN') %}
                         <td>
+                            <span class="label">Utilisateur :</span>
+                            <span class="valeur">{{ commande.utilisateur ? commande.utilisateur.nom ~ ' ' ~ commande.utilisateur.prenom : 'Inconnu' }}</span>
+                        </td>
+                    {% else %}
+                        <td>
+                            <span class="label">Email :</span>
+                            <span class="valeur">{{ commande.utilisateur ? commande.utilisateur.email : 'Inconnu' }}</span>
+                        </td>
+                    {% endif %}
+
+                    <td>
+                        <span class="label">Adresse :</span>
+                        <span class="valeur">
                             {% if commande.utilisateur %}
-                                {{ commande.utilisateur.adresse }},
-                                {{ commande.utilisateur.cp }} {{ commande.utilisateur.ville }}
+                                {{ commande.utilisateur.adresse }}, {{ commande.utilisateur.cp }} {{ commande.utilisateur.ville }}
                             {% else %}
                                 Non renseignée
                             {% endif %}
-                        </td>
-                        <td>{{ nbArticles }}</td>
-                        <td>{{ total }}</td>
-                        <td class="BouttonVoir">
-                         {% if is_granted('ROLE_ADMIN') %}
-                            <a href="{{ path('Compte_AdministrateurDetailCommande', {id: commande.id}) }}">Voir</a>
+                        </span>
+                    </td>
+
+                    <td>
+                        <span class="label">Nombre d'articles :</span>
+                        <span class="valeur">{{ nbArticles }}</span>
+                    </td>
+
+                    <td>
+                        <span class="label">Total de la commande :</span>
+                        <span class="valeur">{{ total }} €</span>
+                    </td>
+
+                    <td class="BouttonVoir">
+                        <span class="label">Détail :</span>
+                        <span class="valeur">
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a href="{{ path('Compte_AdministrateurDetailCommande', {id: commande.id}) }}">Voir</a>
                             {% elseif is_granted('ROLE_USER') %}
-                            <a href="{{ path('Compte_UtilisateurDetailCommande', {id: commande.id}) }}">Voir</a>
-                             {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            {% endif %}
-        </tbody>
-    </table>
+                                <a href="{{ path('Compte_UtilisateurDetailCommande', {id: commande.id}) }}">Voir</a>
+                            {% endif %}
+                        </span>
+                    </td>
+                </tr>
+            {% endfor %}
+        {% endif %}
+    </tbody>
+</table>
+
 </div>
 
 {% endblock %}
